# war30k-adventure

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
assets/: garro_frames.json  sample_frames.json  traitor_frames.json
docs/releases/: v0.6.0.md
include/: animated_sprite.hpp  core_types.hpp  enemy.hpp  font.hpp  game.hpp  player.hpp  render.hpp  sprite_system.hpp  world.hpp
scripts/: generate_sheets.py  package_tps_releases.sh
src/: game.cpp  main.cpp
src/core/: animated_sprite.cpp  common.cpp  enemy.cpp  player.cpp  render.cpp  sprite_system.cpp  world.cpp
tps/: project.godot
tps/art/: GRAPHICS_ASSET_MANIFEST.json  THIRD_PARTY_GRAPHICS_LICENSES.md
tps/audio/: ASSET_MANIFEST.json  THIRD_PARTY_AUDIO_LICENSES.md
tps/audio/sources/: boss-battle-6-metal-v1.wav.import  last-stand-lets-go.ogg.import  rb-rock-fusion-song.ogg.import
tps/data/abilities/: ability_profiles.json
tps/data/ai/: squad_profiles.json
tps/data/bosses/: boss_profiles.json
tps/data/combat/: weapon_profiles.json
tps/data/missions/: mission_profiles.json  objective_profiles.json
tps/data/progression/: progression_profiles.json
tps/data/qa/: test_matrix.json
tps/data/ux/: settings_defaults.json
tps/docs/tps-migration/: 00_vision.md  01_tech-architecture.md  02_art-bible-deathguard30k.md  03_vertical-slice-spec.md  04_narrative-bible.md  05_execution-backlog.md
tps/scenes/cutscenes/: SCN_CutsceneDirector.tscn
tps/scenes/enemies/: SCN_Boss_HarbingerOfRuin.tscn  SCN_EnemyCultistRanged.tscn  SCN_EnemyNurgleChampion.tscn  SCN_EnemyProjectile.tscn  (+1 more)
(+374 files in other folders)
